# SMCC

./: .gitignore  README.md  REFERENCE.md  pyproject.toml
Examples/: Pipfile  jupyter_example.ipynb  python_example.py
src/: Commands.py
src/SMCC/: Commands.py  Constants.py
