[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SMC_core"
version = "0.0.2"
authors = [
  { name="Mauricio Aravena Cifuentes", email="maurio.aravena@sansano.usm.cl" },
]
description = "SMC_core (SMCC) allows for direct communication and control of the Serial-Motor-Controller project via Python-code."
readme = "tools/SMC_core/README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Wauro21/Stepper-Motor-Controller"
"Bug Tracker" = "https://github.com/Wauro21/Stepper-Motor-Controller/issues"