[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SMCC"
version = "0.0.1"
authors = [
  { name="Mauricio Aravena Cifuentes", email="maurio.aravena@sansano.usm.cl" },
]
description = "SMC_core (SMCC) allows for direct communication and control of the Serial-Motor-Controller project via Python-code."
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  'bitarray>=2.7.6',
]


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Wauro21/SMCC"
"Bug Tracker" = "https://github.com/Wauro21/SMCC/issues"
